--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Hello World!</title>
-    <link href="./style.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" href="./style.css" type="text/css">
   </head>
-
   <body>
-    <h1>Hello No!</h1>
+    <h1>Hello World!</h1>
   </body>
-
   <script>
-    // require('./bundle.js');
+    require('./bundle.js');
   </script>
 </html>
