--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css" type="text/css">
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <input type="text" id="input">
   </body>
   <script>
     require('./bundle.js');
