--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <input type="text" id="input">
+    <input type="text" id="placeholder" class="placeholder" readonly>
   </body>
   <script>
     require('./bundle.js');
