--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>Hello World!</title>
-    <link rel="stylesheet" href="./style.css" type="text/css">
+    <title>sulaiman</title>
+    <link rel="stylesheet" href="../styles/input.css" type="text/css">
+    <link rel="stylesheet" href="../styles/base.css" type="text/css">
   </head>
   <body>
     <input type="text" id="input">
