--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>sulaiman</title>
-    <link rel="stylesheet" href="../styles/input.css" type="text/css">
+    <link rel="stylesheet" href="../styles/font.css" type="text/css">
     <link rel="stylesheet" href="../styles/base.css" type="text/css">
+    <link rel="stylesheet" href="../styles/input.css" type="text/css">
+    <link rel="stylesheet" href="../styles/button.css" type="text/css">
   </head>
   <body>
-    <input type="text" id="input">
-    <input type="text" id="placeholder" class="placeholder" readonly>
   </body>
   <script>
     require('./bundle.js');
