--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>sulaiman</title>
-    <link rel="stylesheet" href="../styles/font.css" type="text/css">
-    <link rel="stylesheet" href="../styles/base.css" type="text/css">
-    <link rel="stylesheet" href="../styles/input.css" type="text/css">
-    <link rel="stylesheet" href="../styles/button.css" type="text/css">
+    <link rel="stylesheet" href="../styles/fonts.css" type="text/css">
+    <link rel="stylesheet" href="../styles/body.css" type="text/css">
+    <link rel="stylesheet" href="../styles/searchBar.css" type="text/css">
+    <link rel="stylesheet" href="../styles/page.css" type="text/css">
   </head>
   <body>
       <!-- <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 52.495 52.495" style="enable-background:new 0 0 52.495 52.495;" xml:space="preserve" width="512px" height="512px"><g transform="matrix(0.922745 0 0 0.922745 2.02776 2.02776)"><path d="M52.495,24.07L30.113,1.566v13.453c-12.736-0.124-18.765,5.382-18.979,5.584C-2.691,32.106,0.252,48.195,0.283,48.356  l0.5,2.573l1.341-2.252C12.43,31.36,26.64,32.383,30.113,32.929v13.645L52.495,24.07z M2.004,45.152  c-0.126-4.874,0.905-15.104,10.451-23.048c0.057-0.053,5.646-5.086,17.371-5.086c0.411,0,0.831,0.006,1.257,0.02l1.03,0.03V6.413  L49.674,24.07L32.113,41.726V31.315l-0.765-0.185C31.171,31.085,14.279,27.251,2.004,45.152z" data-original="#000000" class="active-path" data-old_color="#ffffff" fill="#ffffff"/></g> </svg> -->
