--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>sulaiman</title>
-  </head>
-  <body>
-  </body>
-  <script>
-    require('./renderer/renderer.js');
-  </script>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta http-equiv="Content-Security-Policy" content="script-src 'unsafe-inline'">
+  <title>sulaiman</title>
+</head>
+
+<body>
+</body>
+
+<script>
+  require('./renderer/renderer.js');
+</script>
+
 </html>
