--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,67 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta http-equiv="Content-Security-Policy" content="script-src 'unsafe-inline'">
   <title>Sulaiman</title>
+
+  <style>
+    body
+    {
+      margin: 0px;
+
+      overflow: hidden;
+    }
+
+    .splash
+    {
+      z-index: 2;
+      background-color: #272727;
+      position: absolute;
+      width: 100vw;
+      height: 100vh;
+    }
+
+    .dot, .dot2, .dot3
+    {
+      position: absolute;
+      width: 5.5vw;
+      height: 5.5vw;
+      border-radius: 50%;
+      background-color: #444444;
+      left: calc((100vw - 5.5vw) / 2);
+      top: 37.5vh;
+      transform: scale(1, 1.25);
+      animation: bounce 0.5s cubic-bezier(0.5, 0.05, 0.8, 0.5);
+      animation-direction: alternate;
+      animation-iteration-count: infinite;
+    }
+
+    .dot2
+    {
+      left: calc(((100vw - 5.5vw) / 2) + 10vw);
+      animation-delay: 0.2s;
+    }
+
+    .dot3
+    {
+      left: calc(((100vw - 5.5vw) / 2) - 10vw);
+      animation-delay: 0.35s;
+    }
+
+    @keyframes bounce
+    {
+      0% { transform: scale(1, 1.25) translate(0px, 0px); }
+      95% { transform: scale(1.2, 1) translate(0px, 24vh) }
+      100% { transform: scale(1.4, 1) translate(0px, 25vh); }
+    }
+  </style>
+
 </head>
 
 <body>
+  <div class="splash">
+    <div class="dot"></div>
+    <div class="dot2"></div>
+    <div class="dot3"></div>
+  </div>
 </body>
 
 <script>
