removed the use of read-only input element and replaced it with centered flexboxs, new empty blockes now have a height and background colors

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
       width: 5.5vw;
       height: 5.5vw;
       border-radius: 50%;
-      background-color: #444444;
+      background-color: #FFFFFF;
       left: calc((100vw - 5.5vw) / 2);
       top: 37.5vh;
       transform: scale(1, 1.25);
