once again with a change to buttons, replace its grid with a flexbox that can fit into any number and shape of elements

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,8 @@
     .splash
     {
       z-index: 2;
-      background-color: #272727;
+      /* background: linear-gradient(to bottom right, #5564C2, #3A2E8D); */
+      background: linear-gradient(to bottom right, #5564C2, #3A2E8D);
       position: absolute;
       width: 100vw;
       height: 100vh;
