scrollbar looks cool now, also we have the math for the expand/collapse thing

--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,8 @@
   <style>
     body
     {
-      margin: 0px;
-
       overflow: hidden;
+      margin: 0;
     }
 
     .splash
@@ -19,8 +18,8 @@
       z-index: 2;
       background: linear-gradient(to bottom right, #5564C2, #3A2E8D);
       position: absolute;
-      width: 100vw;
-      height: 100vh;
+      width: 100%;
+      height: 100%;
     }
 
     .dot, .dot2, .dot3
